--- a/chuyende/chuyende/Areas/Admin/Views/Hangs/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/Hangs/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<chuyende.Models.Hang>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Danh sách hãng";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -33,9 +33,15 @@
                 <i class="fas fa-search"></i> Tìm kiếm
             </button>
         }
-            <div class="actions">
-                <a href="@Url.Action("Create", "Hangs")" class="add-btn">Thêm mới</a>
-            </div>
+    <div class="actions">
+        <a href="@Url.Action("Create", "Hangs")" class="add-btn">
+            <i class="fas fa-plus"></i> Thêm mới
+        </a>
+        <a href="@Url.Action("Trash", "Hangs")" class="trash-btn">
+            <i class="fas fa-trash"></i> Thùng rác
+        </a>
+
+    </div>
         
     </div>
     
@@ -72,15 +78,19 @@
 
                     <td>@Html.DisplayFor(modelItem => item.SoDienThoai)</td>
                     <td class="action-icons">
-                            <a href="@Url.Action("Edit", "Hangs", new { id = item.MaHang })">
-                                <i class="fas fa-edit edit"></i>
-                            </a>
-                        <a href="@Url.Action("Details","Hangs", new { id = item.MaHang })">
-                            <i class="fas fa-eye view"></i>
+                        <a href="@Url.Action("Edit","Hangs", new { id = item.MaHang })" class="btn-icon edit">
+                            <i class="fas fa-edit"></i>
                         </a>
-                            <a href="@Url.Action("Delete", "Hangs", new { id = item.MaHang })">
-                                <i class="fas fa-trash delete"></i>
-                            </a>
+                        <a href="@Url.Action("Details","Hangs", new { id = item.MaHang })" class="btn-icon view">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        @using (Html.BeginForm("MoveToTrash", "Hangs", new { id = item.MaHang }, FormMethod.Post, new { @class = "delete-form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="btn-icon delete">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        }
                     </td>
                 </tr>
                 stt++;
