--- a/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Index.cshtml
@@ -59,7 +59,7 @@
                         <a href="@Url.Action("Details","LoaisanPhams", new { id = item.MaLoaiSP })" class="btn-icon view">
                             <i class="fas fa-eye"></i>
                         </a>
-                        @using (Html.BeginForm("MoveToTrash", "LoaSanPhams", new { id = item.MaLoaiSP }, FormMethod.Post, new { @class = "delete-form" }))
+                        @using (Html.BeginForm("MoveToTrash", "LoaiSanPhams", new { id = item.MaLoaiSP }, FormMethod.Post, new { @class = "delete-form" }))
                         {
                             @Html.AntiForgeryToken()
                             <button type="submit" class="btn-icon delete">
